<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.EditProfileActivity">
    <EditText
        android:id="@+id/editProfileEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileImageView" />

    <EditText
        android:id="@+id/editProfileNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/name"
        android:inputType="textPersonName|text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileEmailTextView" />

    <EditText
        android:id="@+id/editProfileNickTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/nick"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileNameTextView" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/editProfileImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="116dp"
        android:clickable="true"
        android:onClick="editPicPress"
        android:src="@drawable/ic_person"
        app:civ_border="false"
        app:civ_circle_color_direction="top_to_bottom"
        app:civ_circle_color_end="#22838383"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

    <ProgressBar
        android:id="@+id/editProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/editProfileImageView"
        app:layout_constraintEnd_toEndOf="@+id/editProfileImageView"
        app:layout_constraintStart_toStartOf="@+id/editProfileImageView"
        app:layout_constraintTop_toTopOf="@+id/editProfileImageView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileNickTextView">

        <Button
            android:id="@+id/editProfileCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancelPress"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/editProfileFinalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="confirmButtonPress"
            android:text="@string/confirm_changes" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>